# EmoVisor

./: .gitignore  docker-compose.yaml
api/: Dockerfile  pyproject.toml
api/app/: config.py  main.py  routes.py  startup.py
worker/: pyproject.toml
worker/service/: __main__.py  models.py  process.py  requirements.txt  utils.py
worker/service/assessment/: assess.py
worker/service/assessment/audio/: assess.py
worker/service/assessment/video/: assess.py  core.py
worker/service/assessment/video/emonet/: data_augmentation.py
worker/service/highlighting/: cut.py
worker/service/processing/: __init__.py
worker/service/threshholding/: thresh.py
