[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["SAEV"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
aioredis = "^2.0.0"
aioboto3 = "^9.2.2"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
