[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["SAEV"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
redis = "^4.0.2"
loguru = "^0.5.3"
dataclass-factory = "^2.13"
requests = "^2.26.0"
boto3 = "^1.20.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
